--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
   <label for="amount">Gamble amount:</label>
   <input type="number" id="amount" min="1"><br>
   <button onclick="gamble()">Gamble</button>
-  <button onclick="endSession()">End Session</button>
+  <button id="endBtn" onclick="endSession()">End Session</button>
   <button onclick="resetGame()">Reset</button>
 
   <script>
     let money = 100;
     let startMoney = 100;
     let loanTaken = 0;
+    let sessionEnded = false;
     const output = document.getElementById("output");
+    const endBtn = document.getElementById("endBtn");
 
     function log(message) {
       output.textContent += '\n' + message;
@@ -48,6 +50,11 @@
     }
 
     function gamble() {
+      if (sessionEnded) {
+        log("Session has ended. Reset to play again.");
+        return;
+      }
+
       const amount = parseInt(document.getElementById("amount").value);
 
       if (isNaN(amount) || amount <= 0) {
@@ -78,6 +85,11 @@
     }
 
     function endSession() {
+      if (sessionEnded) return;
+
+      sessionEnded = true;
+      endBtn.disabled = true;
+
       const profit = money - startMoney - loanTaken;
       log(`\n--- SESSION ENDED ---`);
       log(`You ended with $${money}.`);
@@ -89,6 +101,8 @@
       money = 100;
       startMoney = 100;
       loanTaken = 0;
+      sessionEnded = false;
+      endBtn.disabled = false;
       output.textContent = "You have $100";
     }
   </script>
